Updated docs, Release v3.3.4

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                     <div class="form-control">
-                        <label for="refreshBtn">♻️ Warp Configs</label>
+                        <label for="refreshBtn">♻️ Warp Accounts</label>
                         <div>
                             <button type="button" class="button reverse" onclick="updateWarpConfigs()">
                                 Update<span id="warp-update" class="material-symbols-rounded">autorenew</span>
