Removed obfuscation, closes #940

--- a/src/assets/login/index.html
+++ b/src/assets/login/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BPB Panel</title>
+    <title>&#x42;&#x50;&#x42;&#xA; Panel</title>
     <link rel="icon" href="/favicon.ico" />
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=login,visibility,visibility_off&display=block"
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h1>
-            <img class="icon" src="/favicon.ico" alt="BPB Logo"> BPB Panel <span id="panel-version"
+            <img class="icon" src="/favicon.ico" alt="&#x42;&#x50;&#x42;&#xA; Logo"> &#x42;&#x50;&#x42;&#xA; Panel <span id="panel-version"
                 style="font-size: smaller;">
                 v__PANEL_VERSION__
             </span>
@@ -42,7 +42,7 @@
             </form>
         </div>
     </div>
-    <script>__SCRIPT__</script>
+    <script src="data:text/javascript;base64,__SCRIPT__"></script>
 </body>
 
 </html>
