Revised build setup, closes #940

--- a/src/assets/error/index.html
+++ b/src/assets/error/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>&#x42;&#x50;&#x42;&#xA; Panel</title>
+    <title>BPB Panel</title>
     <link rel="icon" href="/favicon.ico" />
     __STYLE__
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div id="error-container">
         <h1>
-            <img class="icon" src="/favicon.ico" alt="&#x42;&#x50;&#x42;&#xA; Logo"> &#x42;&#x50;&#x42;&#xA; Panel <span id="panel-version"
+            <img class="icon" src="/favicon.ico" alt="BPB Logo"> BPB Panel <span id="panel-version"
                 style="font-size: smaller;">
                 v__PANEL_VERSION__
             </span>
@@ -24,7 +24,7 @@
             </p>
         </div>
     </div>
-    <script src="data:text/javascript;base64,__SCRIPT__"></script>
+    <script>__SCRIPT__</script>
 </body>
 
 </html>
