--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&#x42;&#x50;&#x42;&#xA; Panel</title>
+    <title>BPB Panel</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
@@ -14,7 +14,7 @@
 
 <body>
     <h1>
-        <img class="icon" src="/favicon.ico" alt="&#x42;&#x50;&#x42;&#xA; Logo"> &#x42;&#x50;&#x42;&#xA; Panel <span id="panel-version"
+        <img class="icon" src="/favicon.ico" alt="BPB Logo"> BPB Panel <span id="panel-version"
             style="font-size: smaller;">
             v__PANEL_VERSION__
         </span>
@@ -24,7 +24,7 @@
         <form id="configForm" class="configForm" onsubmit="updateSettings(event)">
             <details class="details">
                 <summary>
-                    <h3>&#x56;&#x4C;&#x45;&#x53;&#x53; - &#x54;&#x72;&#x6F;&#x6A;&#x61;&#x6E;</h3>
+                    <h3>VLESS - Trojan</h3>
                 </summary>
                 <div class="section">
                     <div class="form-control">
@@ -113,12 +113,12 @@
                                 <div class="proto">
                                     <input type="checkbox" id="VLConfigs" name="VLConfigs" value="true"
                                         onchange="handleProtocolChange(event)">
-                                    <label for="VLConfigs">&#x56;&#x4C;&#x45;&#x53;&#x53;</label>
+                                    <label for="VLConfigs">VLESS</label>
                                 </div>
                                 <div class="proto">
                                     <input type="checkbox" id="TRConfigs" name="TRConfigs" value="true"
                                         onchange="handleProtocolChange(event)">
-                                    <label for="TRConfigs">&#x54;&#x72;&#x6F;&#x6A;&#x61;&#x6E;</label>
+                                    <label for="TRConfigs">Trojan</label>
                                 </div>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                     <div class="form-control">
                         <label for="warpEndpoints">
                             ✨ Endpoints
-                            <a class="scanner" href="https://github.com/bia-pain-bache/&#x42;&#x50;&#x42;&#xA;-Warp-Scanner" title="Scanner" target="_blank" rel="noopener noreferrer">
+                            <a class="scanner" href="https://github.com/bia-pain-bache/BPB-Warp-Scanner" title="Scanner" target="_blank" rel="noopener noreferrer">
                                 <span class="material-symbols-rounded">open_in_new</span>
                             </a>
                         </label>
@@ -1101,7 +1101,7 @@
         <div class="footer">
             <div class="github-container">
                 <i class="fa fa-github"></i>
-                <a class="link" id="github-link" href="https://github.com/bia-pain-bache/&#x42;&#x50;&#x42;&#xA;-Worker-Panel"
+                <a class="link" id="github-link" href="https://github.com/bia-pain-bache/BPB-Worker-Panel"
                     target="_blank">Github</a>
             </div>
             <button id="openResetPass" class="button" onclick="openResetPass()">Change Password <span
@@ -1121,7 +1121,7 @@
         polyfillCountryFlagEmojis();
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="data:text/javascript;base64,__SCRIPT__"></script>
+    <script>__SCRIPT__</script>
 </body>
 
 </html>
