Refactor secrets generator to single credentials output
Consolidated UUID, Trojan password, and subscription URI path outputs into a single textarea for easier copying and display. Updated HTML structure, JS logic, and CSS styles to support the new unified credentials output.

Fix indentation in generated .env credentials

Removes unintended leading spaces from TR_PASS and SUB_PATH lines in the generated .env credentials text to ensure correct formatting.

Update env variable names in credentials output

Changed the output variable names from TROJAN_PASSWORD and SUB_URI_PATH to TR_PASS and SUB_PATH for consistency with .env format.

--- a/src/assets/secrets/index.html
+++ b/src/assets/secrets/index.html
@@ -23,34 +23,12 @@
         <div class="form-container">
             <h2>Secrets generator</h2>
             <div>
-                <h3>Random UUID</h3>
+                <h3>Random Credentials</h3>
                 <div class="value-container">
                     <div class="output-container">
-                        <span id="uuid" class="output"></span>
+                        <textarea id="credentials" class="output" rows="6" readonly></textarea>
                     </div>
-                    <span class="material-symbols-rounded" onclick="copyToClipboard('uuid')">
-                        content_copy
-                    </span>
-                </div>
-            </div>
-            <div>
-                <h3>Random Trojan Password</h3>
-                <div class="value-container">
-                    <div class="output-container">
-                        <span id="tr-password" class="output"></span>
-                    </div>
-                    <span class="material-symbols-rounded" onclick="copyToClipboard('tr-password')">
-                        content_copy
-                    </span>
-                </div>
-            </div>
-            <div>
-                <h3>Random Subscription URI path</h3>
-                <div class="value-container">
-                    <div class="output-container">
-                        <span id="sub-path" class="output"></span>
-                    </div>
-                    <span class="material-symbols-rounded" onclick="copyToClipboard('sub-path')">
+                    <span class="material-symbols-rounded" onclick="copyToClipboard('credentials')">
                         content_copy
                     </span>
                 </div>
