Revised NAT64 prefixes, DNS resolution.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -155,7 +155,14 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="nat64Prefix">📍 NAT64 Prefix</label>
+                                <label for="nat64Prefix">
+                                    📍 NAT64 Prefix
+                                    <a class="scanner"
+                                        href="https://github.com/bia-pain-bache/BPB-Worker-Panel/blob/main/src/protocols/NAT64Prefixes.md"
+                                        title="Proxy IPs" target="_blank" rel="noopener noreferrer">
+                                        <span class="material-symbols-rounded">open_in_new</span>
+                                    </a>
+                                </label>
                                 <div>
                                     <input type="text" id="nat64Prefix" name="nat64Prefix">
                                 </div>
