Added multiple NAT64 prefixes support, Release v3.4.1

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -155,16 +155,16 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="nat64Prefix">
-                                    📍 NAT64 Prefix
+                                <label for="nat64Prefixes">
+                                    📍 NAT64 Prefixes
                                     <a class="scanner"
                                         href="https://github.com/bia-pain-bache/BPB-Worker-Panel/blob/main/src/protocols/NAT64Prefixes.md"
-                                        title="Proxy IPs" target="_blank" rel="noopener noreferrer">
+                                        title="NAT64 prefixes" target="_blank" rel="noopener noreferrer">
                                         <span class="material-symbols-rounded">open_in_new</span>
                                     </a>
                                 </label>
                                 <div>
-                                    <input type="text" id="nat64Prefix" name="nat64Prefix">
+                                    <textarea type="text" id="nat64Prefixes" name="nat64Prefixes"  rows="1"></textarea>
                                 </div>
                             </div>
                         </div>
