--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -51,29 +51,6 @@
                         </div>
                     </div>
                     <div class="form-control">
-<<<<<<< HEAD
-=======
-                        <label for="proxyIPs">
-                            📍 Proxy IPs / Domains
-                            <a class="scanner" href="https://www.nslookup.io/domains/bpb.yousef.isegaro.com/dns-records/"
-                                title="Proxy IPs" target="_blank" rel="noopener noreferrer">
-                                <span class="material-symbols-rounded">open_in_new</span>
-                            </a>
-                        </label>
-                        <div>
-                            <div style="display: flex; gap: 5px; margin-bottom: 5px;">
-                                <select id="proxyIPsSelect" style="flex: 1;">
-                                    <option value="">Select Proxy IP</option>
-                                </select>
-                                <button type="button" id="refreshProxyIPs" title="Refresh Proxy IPs" onclick="loadProxyIPs()">
-                                    <span class="material-symbols-rounded">autorenew</span>
-                                </button>
-                            </div>
-                            <textarea type="text" id="proxyIPs" name="proxyIPs" rows="1" placeholder="Enter or select proxy IPs, one per line"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-control">
->>>>>>> parent of 2598a36 (Revert "Complete the function")
                         <label for="outProxy">✈️ Chain Proxy</label>
                         <div>
                             <input type="text" id="outProxy" name="outProxy">
@@ -168,19 +145,16 @@
                                 <label for="proxyIPs">
                                     📍 Proxy IPs / Domains
                                     <a class="scanner"
-                                        href="https://raw.githubusercontent.com/happymy/Pip_Json_DEMO2/refs/heads/main/output.json"
-                                        title="Proxy IPs Source" target="_blank" rel="noopener noreferrer">
+                                        href="https://www.nslookup.io/domains/bpb.yousef.isegaro.com/dns-records/"
+                                        title="Proxy IPs" target="_blank" rel="noopener noreferrer">
                                         <span class="material-symbols-rounded">open_in_new</span>
                                     </a>
-                                    <button type="button" id="proxyIPsMenuBtn" class="scanner" title="Select Proxy IPs" onclick="toggleProxyIPsMenu()">
-                                        <i class="fa fa-list fa-2x" aria-hidden="true"></i>
+                                    <button type="button" id="fetchProxyIPs" class="scanner" title="Fetch proxy IPs from GitHub" onclick="openProxyIPModal()">
+                                        <span class="material-symbols-rounded">cloud_download</span>
                                     </button>
                                 </label>
                                 <div>
-                                    <div id="proxyIPsMenu" class="proxy-ips-menu" style="display: none; position: absolute; background: white; border: 1px solid #ccc; border-radius: 4px; padding: 8px; max-height: 300px; overflow-y: auto; z-index: 1000; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                                        <div id="proxyIPsMenuContent"></div>
-                                    </div>
-                                    <textarea type="text" id="proxyIPs" name="proxyIPs" rows="1" placeholder="Enter Proxy IPs/Domains, one per line"></textarea>
+                                    <textarea type="text" id="proxyIPs" name="proxyIPs" rows="1"></textarea>
                                 </div>
                             </div>
                             <div class="form-control">
@@ -1141,13 +1115,44 @@
             <div class="modal-content" class="modal-content">
                 <div class="modal-header">
                     <span id="closeQR" class="close" onclick="closeQR()">&times;</span>
-                    <span id="qrcodeTitle" class="qr-title"></span>
+                    <span id="qrcode极速" class="qr-title"></span>
                 </div>
                 <div id="qrcode-container"></div>
             </div>
         </div>
+        
+        <!-- Proxy IP Selection Modal -->
+        <div id="proxyIPModal" class="modal">
+            <div class="modal-content" style="max-width: 800px;">
+                <div class="modal-header">
+                    <span class="close" onclick="closeProxyIPModal()">&times;</span>
+                    <h3>Select Proxy IPs</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="header-container">
+                        <button type="button" class="button" onclick="fetchProxyIPsFromGitHub()" title="Refresh IP list">
+                            <i class="fa fa-refresh"></i> Refresh
+                        </button>
+                        <button type="button" class="button" onclick="selectAllIPs()" title="Select all IPs">
+                            <i class="fa fa-check-square-o"></i> Select All
+                        </button>
+                        <button type="button" class="button" onclick="clearAllIPs()" title="Clear all selections">
+                            <i class="fa fa-square-o"></i> Clear All
+                        </button>
+                    </div>
+                    <div id="proxyIPList" class="ip-selection-list" style="max-height: 400px; overflow-y: auto; margin: 10px 0;"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="button" onclick="applySelectedIPs()">Apply Selected</button>
+                        <button type="button" class="button reverse" onclick="closeProxyIPModal()">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="header-container">
             <h2><span class="material-symbols-rounded">fingerprint</span> My IP</h2>
+            <button type="button" id="refresh-geo-location" class="refresh-geo-location" onclick="fetchIPInfo()">
+                <i class="fa fa-refresh fa-2x refresh-my-ip" aria-hidden="true"></i>
+            </button>
         </div>
         <div class="my-ip">
             <table id="ips" class="my-ip">
