Try to fix 1101, closes #987

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -137,7 +137,7 @@
                                 <div>
                                     <select id="proxyIPMode" name="proxyIPMode">
                                         <option value="proxyip">Proxy IP</option>
-                                        <option value="nat64">NAT64</option>
+                                        <option value="prefix">NAT64</option>
                                     </select>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="nat64Prefixes">
+                                <label for="prefixes">
                                     📍 NAT64 Prefixes
                                     <a class="scanner"
                                         href="https://github.com/bia-pain-bache/BPB-Worker-Panel/blob/main/src/protocols/NAT64Prefixes.md"
@@ -164,7 +164,7 @@
                                     </a>
                                 </label>
                                 <div>
-                                    <textarea type="text" id="nat64Prefixes" name="nat64Prefixes"  rows="1"></textarea>
+                                    <textarea type="text" id="prefixes" name="prefixes"  rows="1"></textarea>
                                 </div>
                             </div>
                         </div>
