fix: 优化设置面板，确保在填充代理设置时处理未定义值

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -33,7 +33,7 @@
     <div class="form-container container">
         <h2><span class="material-symbols-rounded">settings</span> <span data-i18n="settings">Settings</span></h2>
         <form id="configForm" class="configForm" onsubmit="updateSettings(event)">
-            <details>
+            <details open>
                 <summary>
                     <h3 data-i18n="appearance">Appearance</h3>
                 </summary>
